style/custom.css
.dm-hidden-navmenu-opener {
    position: fixed;
    background-color: rgba(216, 216, 216, 0.029); 
    height: 100%; 
    width: 10%; 
    top: 0
}

#avatar {
    margin: auto;
}

.btn.outline {
    background: none;
    padding: 12px 22px;
}
.btn-primary.outline {
    border: 2px solid #0099cc;
    color: #0099cc;
}
.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
    color: #33a6cc;
    border-color: #33a6cc;
}
.btn-primary.outline:active, .btn-primary.outline.active {
    border-color: #007299;
    color: #007299;
    box-shadow: none;
}

.dm-navbar li {
    font-size: 2rem;
}

.dm-navbar li i.material-icons {
    font-size: 3rem;
}

